test/statements/diten/continueInForall.good
continueInForall.chpl:3: error: continue is not allowed in forall statement [build.cpp:75]
