test/statements/diten/continueInForall.chpl
forall i in 1..10 {
  if i == 5 then
    continue;
}
